feat : hw3 fixes on review